Integrated signing functionality from CLIAuthenticate.js. The sign in page now takes the user's email and password and logs them into SupaBase. It will output an error if the login was not sucessful and will send the user to the 2FA page if it is (this is a temporary implementation for testing since 2FA is not yet integrated).

--- a/password-manager/src/LoginRegister.css
+++ b/password-manager/src/LoginRegister.css
@@ -8,7 +8,16 @@
   .login-register-content {
     max-width: 400px; 
     text-align: left;
-    padding: 20px
+    padding: 30px
+  }
+
+  .error-message {
+    color: red;
+    margin-top: 2px;
+    margin-top: 0px;
+    padding: 0px;
+    font-size: 14px;
+    font-weight: bold;
   }
 
   .login-register-title {
