--- a/password-manager/src/global-styles.css
+++ b/password-manager/src/global-styles.css
@@ -30,7 +30,6 @@
 .form {
   max-width: 400px;
   text-align: left;
-  padding: 20px;
 }
 
 .form input {
@@ -60,7 +59,7 @@
 .split-left {
     flex: 1;
     background-color: var(--mossGreen);
-    color: var(--darkGreen);
+    color: black;
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -73,4 +72,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.title-box{
+  width: 300px;
+  background-color: var(--forestGreen);
+  padding: 50px 50px 5px 30px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  border-radius: 30px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
