Implemented update and delete into access password page. Additionally implemented copy password and visit website buttons.

--- a/password-manager/src/AccessPassword.css
+++ b/password-manager/src/AccessPassword.css
@@ -118,6 +118,28 @@ select.custom-dropdown {
     cursor: pointer;
   }
 
+  .edit-container {
+    display: flex;
+    align-items: center;
+  }
+  
+
+  .edit-save-button {
+    margin-top: 5px;
+    margin-left: 10px;
+    padding: 5px;
+    font-size: 12px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    background-color: var(--orange);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
    .info-section {
     margin-bottom: 15px;
     margin-left: 10px;
@@ -139,5 +161,11 @@ select.custom-dropdown {
     height: 1px;
     background-color: #ddd;
     margin: 10px 0;
+  }
+
+  .copyMessage {
+    margin-left: 15px;
+    font-weight: bold;
+    color: var(--forestGreen);
   }
   
