--- a/password-manager/src/global-styles.css
+++ b/password-manager/src/global-styles.css
@@ -44,6 +44,18 @@
   color: black;
 }
 
+input {
+  width: 250px;
+  font-size: 16px;
+  padding: 10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  background-color: lightgrey;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  border: none;
+  color: black;
+}
+
 .content {
   max-width: 400px;
   text-align: left;
