Integrated getUserParentID to connect password database to user account. Integrated sign out button for dashboard and new password pages. Implemented accounttable search bar.

--- a/password-manager/src/NewPassword.css
+++ b/password-manager/src/NewPassword.css
@@ -36,6 +36,11 @@
     text-decoration: none;
     color: black;
   }
+
+  .title h2 {
+    text-align: left;
+    margin-left: 20px;
+  }
   
   .main-content {
     flex: 1;
@@ -92,4 +97,30 @@
     margin-left: 20px;
     margin-bottom: 15px;
     margin-right: 35px;
+  }
+
+  .button3 {
+    margin-top: 10px;
+    margin-left: 20px;
+    padding: 15px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    background-color: var(--orange);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+  }
+
+  .error-message2 {
+    color: red;
+    margin-top: 2px;
+    margin-top: 0px;
+    margin-left: 20px;
+    padding: 0px;
+    font-size: 14px;
+    font-weight: bold;
   }
