--- a/password-manager/src/global-styles.css
+++ b/password-manager/src/global-styles.css
@@ -95,3 +95,13 @@ input {
   border-radius: 30px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
+
+.error-message2 {
+  color: red;
+  margin-top: 2px;
+  margin-top: 7px;
+  margin-left: 20px;
+  padding: 0px;
+  font-size: 14px;
+  font-weight: bold;
+}
