adding search and log out icons

--- a/password-manager/src/global-styles.css
+++ b/password-manager/src/global-styles.css
@@ -103,6 +103,7 @@ input {
   margin-top: 15px;
   margin-left: 20px;
   padding: 18px;
+  width: 300px;
   font-size: 14px;
   font-weight: bold;
   border-radius: 15px;
