--- a/password-manager/src/Dashboard.css
+++ b/password-manager/src/Dashboard.css
@@ -42,6 +42,7 @@
   }
 
   .search-bar{
+    position: relative;
     width: 400px;
     padding: 12px;
     margin-left: 20px;
@@ -89,3 +90,12 @@
     padding: 8px;
     text-align: left;
   }
+
+  .search-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+  
