--- a/password-manager/src/HomePage.css
+++ b/password-manager/src/HomePage.css
@@ -8,7 +8,7 @@
   .homepage-content {
     max-width: 400px;
     text-align: left;
-    padding: 20px
+    padding: 20px;
   }
 
   .homepage-title {
