--- a/password-manager/src/global-styles.css
+++ b/password-manager/src/global-styles.css
@@ -28,12 +28,12 @@
   background-color: var(--yellow);    
 }
 
-.form {
+.form1 {
   max-width: 400px;
   text-align: center;
 }
 
-.form input {
+.form1 input {
   width: 350px;
   font-size: 16px;
   padding: 10px;
@@ -45,14 +45,19 @@
   color: black;
 }
 
-input {
+.form2 {
+  max-width: 400px;
+  text-align: left;
+}
+
+.form2 input {
   width: 350px;
   font-size: 16px;
   padding: 10px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
   background-color: lightgrey;
   border-radius: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border: none;
   color: black;
 }
@@ -95,6 +100,7 @@ input {
   margin-right: 20px;
   border-radius: 30px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  text-align: left;
 }
 
 .error-message {
