--- a/password-manager/src/AccessPassword.css
+++ b/password-manager/src/AccessPassword.css
@@ -124,7 +124,7 @@ select.custom-dropdown {
   }
   
 
-  .edit-save-button {
+  .save-button {
     margin-top: 5px;
     margin-left: 10px;
     padding: 5px;
@@ -167,5 +167,14 @@ select.custom-dropdown {
     margin-left: 15px;
     font-weight: bold;
     color: var(--forestGreen);
+  }
+
+  .input-icon {
+    position: absolute;
+    top: 15%;
+    left: 325px;
+    display: flex;
+    align-items: center;
+    color: #000000;
   }
   
