editing css for buttons

--- a/password-manager/src/AccessPassword.css
+++ b/password-manager/src/AccessPassword.css
@@ -123,6 +123,15 @@ select.custom-dropdown {
     align-items: center;
   }
   
+  .edit-button:focus {
+    outline: none;
+  }
+  
+  .edit-button {
+    border: 1px solid transparent;
+    background-color: transparent;
+    cursor: pointer;
+  }
 
   .save-button {
     margin-top: 5px;
